# Changelog
All notable changes to this project will be documented in this file.

## Unreleased
- coarse grained SVM support for Intel FPGAs
- host code as library
- configurable platform name
- choice of platform (currently chooses first platform)
- choice of device (currently chooses first device)
- loads binary to multiple devices (currently only the first device)
- batch mode
- xilinx fpgas

## [1.0.0] - []

### Added
- 1d FFT, 2d FFT and 3d FFT
- CI/CD
- gtests
- CMake build
- License