@@ -13,14 +13,18 @@ build-all:
     - cmake ..
     - make
     - make fft1d_emulate
-    - make fft2d_emulate
-    - make fft3d_emulate
+    - make fft2d_ddr_emulate
+    - make fft2d_bram_emulate
+    - make fft3d_ddr_emulate
+    - make fft3d_bram_emulate
     - chmod +x bin/test_fft_fpga bin/host_fft_fpga
   artifacts:
     paths:
       - debug/bin/64pt_fft1d_emulate.aocx
-      - debug/bin/64pt_fft2d_emulate.aocx
-      - debug/bin/64pt_fft3d_emulate.aocx
+      - debug/bin/64pt_fft2d_bram_emulate.aocx
+      - debug/bin/64pt_fft2d_ddr_emulate.aocx
+      - debug/bin/64pt_fft3d_bram_emulate.aocx
+      - debug/bin/64pt_fft3d_ddr_emulate.aocx
       - debug/bin/test_fft_fpga
       - debug/bin/host_fft_fpga
 
